Fixed overflow on events and friends components

--- a/src/Components/FriendsList/FriendsList.css
+++ b/src/Components/FriendsList/FriendsList.css
@@ -1,5 +1,3 @@
-
-
 .friends-list {
     display: flex;
     justify-content: center;
@@ -11,6 +9,7 @@
     border-bottom: 0.5rem;
     border-radius: .5rem;
     margin: 1.25rem;
+    overflow: auto;
 }
 .friends-wrapper {
   background-color: rgba(33, 33, 33, 0.85);
@@ -19,22 +18,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 30em;
 }
 
-.friend-card-wrapper {
-    width: 70%;
-    height: 50%;
-    background-color: rgb(40, 40, 40);
-  }
-  
-  .friend-card {
-    opacity: 0;
-    transform: translateX(-50%);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-  }
-  
-  .friend-card.fade-slide-in {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  
+.friend-card {
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+.friend-card.fade-slide-in {
+  opacity: 1;
+  transform: translateX(0);
+}
